-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.2, Lustre 2.1.3
-
None
-
3
-
8139
Echoing 0 to osc/cur_grant_bytes result to the following LBUG
- echo 0 > /proc/fs/lustre/osc/scratch-OST0003-osc-ffff88004297a000/cur_grant_bytes
Lustre: Mounted scratch-client
LustreError: 4817:0:(layout.c:1528:__req_capsule_offset()) ASSERTION( offset > 0 ) failed: OST_SET_GRANT_INFO:setinfo_val, off=0, loc=0
LustreError: 4817:0:(layout.c:1528:__req_capsule_offset()) LBUG
Pid: 4817, comm: bash
Call Trace:
[<ffffffffa03ab7f5>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
[<ffffffffa03abe07>] lbug_with_loc+0x47/0xb0 [libcfs]
[<ffffffffa063c39b>] __req_capsule_offset+0x7b/0xc0 [ptlrpc]
[<ffffffffa05ff05c>] ? ptlrpc_request_alloc_internal+0xac/0x330 [ptlrpc]
[<ffffffffa063c6de>] req_capsule_set_size+0x6e/0x1c0 [ptlrpc]
[<ffffffffa083f89b>] osc_set_info_async+0xeb/0xa00 [osc]
[<ffffffffa084b460>] osc_shrink_grant_to_target+0x270/0x490 [osc]
[<ffffffffa084efbc>] osc_wr_cur_grant_bytes+0xdc/0x110 [osc]
[<ffffffffa0487fdb>] lprocfs_fops_write+0x7b/0xa0 [obdclass]
[<ffffffff811e0c0e>] proc_reg_write+0x7e/0xc0
[<ffffffff8117b198>] vfs_write+0xb8/0x1a0
[<ffffffff810d6b12>] ? audit_syscall_entry+0x272/0x2a0
[<ffffffff8117bbb1>] sys_write+0x51/0x90
[<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b